day_1/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 6000
    protocol: TCP
  type: LoadBalancer
